; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_cb_pcidas64.c_dio_callback_4020.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_cb_pcidas64.c_dio_callback_4020.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i64)* @dio_callback_4020 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dio_callback_4020(i32 %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %4
  %13 = load i32, i32* %8, align 4
  %14 = load i64, i64* %9, align 8
  %15 = load i32, i32* %7, align 4
  %16 = mul nsw i32 2, %15
  %17 = sext i32 %16 to i64
  %18 = add i64 %14, %17
  %19 = inttoptr i64 %18 to i8*
  %20 = call i32 @writew(i32 %13, i8* %19)
  store i32 0, i32* %5, align 4
  br label %29

21:                                               ; preds = %4
  %22 = load i64, i64* %9, align 8
  %23 = load i32, i32* %7, align 4
  %24 = mul nsw i32 2, %23
  %25 = sext i32 %24 to i64
  %26 = add i64 %22, %25
  %27 = inttoptr i64 %26 to i8*
  %28 = call i32 @readw(i8* %27)
  store i32 %28, i32* %5, align 4
  br label %29

29:                                               ; preds = %21, %12
  %30 = load i32, i32* %5, align 4
  ret i32 %30
}

declare dso_local i32 @writew(i32, i8*) #1

declare dso_local i32 @readw(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
